# bgp-sentry-artifact

./: .env  Cargo.toml  README.md
bgp_sentry/: clock.rs  config.rs  crypto.rs  dataset.rs  main.rs  node_manager.rs  output.rs  types.rs  virtual_node.rs
bgp_sentry/consensus/: blockchain.rs  knowledge_base.rs  mod.rs  origin_attestation.rs  transaction_pool.rs
bgp_sentry/detection/: mod.rs
bgp_sentry/network/: message_bus.rs
dataset_generation/: pyproject.toml  step1_generate_dataset.py
dataset_generation/bgpy/shared/: enums.py
dataset_generation/bgpy/simulation_framework/: __init__.py
dataset_generation/dataset/: METHODOLOGY.md
dataset_generation/dataset/2030_arin_transit/: as_classification.json  as_relationships.json  roa_database.json
dataset_generation/dataset/3152_lacnic_afrinic_transit/: as_classification.json  as_relationships.json  roa_database.json
dataset_generation/dataset/5008_lacnic_5plus_mh/: as_classification.json  as_relationships.json  roa_database.json
dataset_generation/dataset/904_afrinic_transit_mh/: as_classification.json  (+2 more)
dataset_generation/scripts/: extract_regional_topology.py  inject_path_poisoning.py  inject_route_leak.py  verify_dataset.py
evaluation/: create_rpki_ablation.py  rpki_ablation_multiseed.py  score_detection.py
evaluation/figures/: announcement_coverage.py  announcement_coverage_dual.py  consensus_stats.py  full_topology_schematic.py  observation_completeness.py  observation_redundancy.py  p2p_scalability.py  plot_rpki_ablation.py  topology_schematic.py  tps_projection.py  tps_scalability.py
(+13 files in other folders)
